# studyLLM

./: EXECUTION_ANALYSIS.md  IMPLEMENTATION_DETAILS.md  README.md  README_CLEAN.md
Transformer/: .gitignore  README.md  llm-c.md
Transformer/llm-c/: CMakeLists.txt  build.sh
Transformer/llm-c/docs/figures/: llm_block.puml
Transformer/llm-c/examples/: demo_forward.c  hello_min.c
Transformer/llm-c/include/: llm_attention.h  llm_block.h  llm_config.h  llm_ffn.h  llm_math.h  llm_model.h  llm_pe.h  llm_tensor.h  llm_weights_io.h
Transformer/llm-c/scripts/: gen_weights.py
Transformer/llm-c/src/: llm_attention.c  llm_block.c  llm_ffn.c  llm_math.c  llm_model.c  llm_pe.c  llm_tensor.c  llm_weights_io.c
